# game-data-reader

./: .gitignore  Cargo.toml  README.md
src/: egui_glutin.rs  game_data.rs  main.rs  shader_e.frag  shader_e.vert  update.rs
