[package]
name = "game-data-reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glutin = "0.30.3"
glutin-winit = "0.2.1"
winit = "0.27.5"
raw-window-handle = "0.5.0"
egui = "0.20.1"
gl = "0.14.0"
miniserde = "0.1.24"

[dependencies.windows]
version = "0.43.0"
features = [
    "Data_Xml_Dom",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_ProcessStatus",
]

[build-dependencies]
gl_generator = "0.14.0"
